--- a/Skin_Cancer_CNN.ipynb
+++ b/Skin_Cancer_CNN.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Skin Cancer Detection**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Problem Statement**"
    ]
   },
